creata la connection string nel file di configurazoine

--- a/CoreWeb.API/appsettings.json
+++ b/CoreWeb.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=coreweb.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
