Creazione del componente value

--- a/CoreWeb-SPA/angular.json
+++ b/CoreWeb-SPA/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "CoreWeb-SPA"
+    }
+  },
+  "defaultProject": "CoreWeb-SPA",
+  "cli": {
+    "analytics": false
+  }
 }
