--- a/CoreWeb-SPA/package.json
+++ b/CoreWeb-SPA/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
     "@auth0/angular-jwt": "^4.1.2",
+    "@kolkov/ngx-gallery": "^1.2.0",
     "alertifyjs": "^1.13.1",
     "bootstrap": "^4.5.0",
     "bootswatch": "^4.5.0",
