aggiunta sezione CloudinarySettings in appsettings con api

--- a/CoreWeb.API/appsettings.json
+++ b/CoreWeb.API/appsettings.json
@@ -12,5 +12,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "doiniwqnj",
+    "ApiKey": "853365562319981",
+    "ApiSecret": "l0ycb8gLzRFTVy8QhBwDs2JVbqA"
+  }
 }
